# msty-studio-desktop-admin-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: BLOOM_GUIDE.md
src/: __init__.py  phase4_5_tools.py  server.py
src/automation/: __init__.py
src/bloom/: __init__.py  cv_behaviors.py  evaluator.py  example_behaviors.py  mcp_tools.py  ollama_adapter.py
src/calibration/: __init__.py
src/config/: __init__.py
src/database/: __init__.py
src/hardware/: __init__.py
src/intelligence/: __init__.py
src/utils/: __init__.py
tests/: __init__.py  test_server.py
