[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "msty-admin-mcp"
version = "5.0.0"
description = "Comprehensive MCP server for administering Msty Studio Desktop with 36 tools, Bloom integration, and multi-backend support"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "M-Pineapple AI Administration System", email = "admin@pineapple.com"}
]

dependencies = [
    "mcp>=1.0.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
http = [
    "uvicorn>=0.20.0",
    "starlette>=0.30.0",
]

[project.scripts]
msty-admin-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
